Replace Hint with FAQ

--- a/Phases/Phase-6.html
+++ b/Phases/Phase-6.html
@@ -9,13 +9,21 @@ Your solution should begin with <code>fuzzy:</code>.</p>
 <p>Once you solve this, proceed to <a href="../Phases/Phase-7" class="internal alias" data-slug="Phases/Phase-7">Phase 7</a>. Good luck!</p>
 <pre><code>XXxJFS4/Hrqqv3JeIO8txtZjXzTD8ei6fvC4umU7YzVlwnf=MxWFjI8utEmf5/XnJ2T4VDvxht3VNuSwSpTdFM3wTQe6VEYOdn9UU6VhW/iTKFHZV1ezsdyAP9=1nGqffftRcDLcEnb=SSY3FljOZ=SZqXruG7thktdQzQVPQU7KZ24hIt5Dvi/6GrXBiHuXIZayXG5Jir6Y2jeQ4TRsgCLqhxWuMfEYewRVPDPFufHKLItPesBTFhDLH=LThn3euw1yuLHrooRnV7WfOG8WXRaFAZuxIo1VS=pQyQfxvYbNFuOvNUhQAEmIlrXsY0dHjHQNgOeUrxgl6wU2Jhcc7dgEYr4i8=Bf3Y/OZyZdFDAf6Wl5PmzKrJOvpvTdSaDInzrDLZW9WXUsZnqrP61mtH/SIbB8RXNr6GvjZlw17zVvcSmbpyl0gYVVX2zSpvGEDvIldWT93fVx7mKWhDRrnWZ4tdwhzc4CxnM2T=CtZpKSNtQq1PiBEmZ=WkcGVTwyeDBjYu7PNZnAPVSnZQUg95AMOJzDfR5ZDKa7IFMS2HQh0cRbIgJoG61ZLiEjXYZNdxn6Zr4JUO09t1s9CPVXVTSycmiFG3m04iWgEbHmiQh/A/P2IPWb5KtAbmHn36nh5eKwNG6I5X/gPK228vDYdzNVDsT1CbcjS5biPGJGjOMWz8/hSnygU7plvXS1J8ZeoIhqeuKCV85tJIf8s0VmczpYy6aduqzF0lMgpGqF4VFKUjNlX/84jGMqAC8z37r4sDLbw=RNpZDrf3yHzubj7CejcMOmfndqUyxcNN/yaiyoU2KA8QF7LPF8XK0a1MTlWdK4VYro2YfYAmN9JycsE1mM4YOACoRm0DhFgScd1UYWe9IxNM92eHqU2zTdnIb0VbCOWZATMDLIIUuw3dsvZ9FDC1yXuh=GJ8UwD1Re4VtZx8Z8224dxdrhUROabI5O26/Z3k1EoEf25sbrrvoVi3/jMhLaUzEyuHYvDz5YW9dBV/RYV2y4SuqrRAINBohgDFyuCmm130MThBZ6VZuFz1v9OwdhKogZIVEgTAXrHNrh0O0RErxDSYuyhhIgo=rz0yd0p20SHTJdyPSpYtX6wVEWJM2vIPGhwttSMSSWeQfwva2FQu=VEujiq5M6bX0os=seKZhVuhFKtJG/eLT7gMsY4MfJWO9bjxH0HfbdnES=
 </code></pre>
-<blockquote>
-<p>[!hint 1]-
-The digit sum of 120488 <span>⇒</span> 26.</p>
+<blockquote class="callout question is-collapsible is-collapsed" data-callout="question" data-callout-fold>
+<div class="callout-title">
+                  <div class="callout-icon"></div>
+                  <div class="callout-title-inner"><p>Hint 1 </p></div>
+                  <div class="fold-callout-icon"></div>
+                </div>
+<p>The digit sum of 120488 <span>⇒</span> 26.</p>
 </blockquote>
-<blockquote>
-<p>[!hint 2]-
-</p><blockquote class="transclude" data-url="SPOILER---Code-for-Phase-6" data-block><h1>SPOILER - Code for Phase 6</h1><blockquote class="callout tip" data-callout="tip">
+<blockquote class="callout question is-collapsible is-collapsed" data-callout="question" data-callout-fold>
+<div class="callout-title">
+                  <div class="callout-icon"></div>
+                  <div class="callout-title-inner"><p>Hint 2 </p></div>
+                  <div class="fold-callout-icon"></div>
+                </div>
+<p></p><blockquote class="transclude" data-url="SPOILER---Code-for-Phase-6" data-block><h1>SPOILER - Code for Phase 6</h1><blockquote class="callout tip" data-callout="tip">
 <div class="callout-title">
                   <div class="callout-icon"></div>
                   <div class="callout-title-inner"><p>Important</p></div>
@@ -84,9 +92,13 @@ The digit sum of 120488 <span>⇒</span> 26.</p>
 <span data-line> </span>
 <span data-line><span>print(dec)</span></span></code></pre></figure><a href="../Information/SPOILER---Code-for-Phase-6" class="internal transclude-src">Link to original</a></blockquote><p></p>
 </blockquote>
-<blockquote>
-<p>[!hint 3]-
-You should get <code>x8Vlv9Yx12FRe00NuE3sZqECfE81XiIx</code></p>
+<blockquote class="callout question is-collapsible is-collapsed" data-callout="question" data-callout-fold>
+<div class="callout-title">
+                  <div class="callout-icon"></div>
+                  <div class="callout-title-inner"><p>Hint 3 </p></div>
+                  <div class="fold-callout-icon"></div>
+                </div>
+<p>You should get <code>x8Vlv9Yx12FRe00NuE3sZqECfE81XiIx</code></p>
 </blockquote></article></div><div class="right sidebar"><div class="graph"><h3>Graph View</h3><div class="graph-outer"><div id="graph-container" data-cfg="{&quot;drag&quot;:true,&quot;zoom&quot;:true,&quot;depth&quot;:1,&quot;scale&quot;:1.1,&quot;repelForce&quot;:0.5,&quot;centerForce&quot;:0.3,&quot;linkDistance&quot;:30,&quot;fontSize&quot;:0.6,&quot;opacityScale&quot;:1,&quot;showTags&quot;:true,&quot;removeTags&quot;:[],&quot;focusOnHover&quot;:false}"></div><svg version="1.1" id="global-graph-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55 55" fill="currentColor" xml:space="preserve"><path d="M49,0c-3.309,0-6,2.691-6,6c0,1.035,0.263,2.009,0.726,2.86l-9.829,9.829C32.542,17.634,30.846,17,29,17
 	s-3.542,0.634-4.898,1.688l-7.669-7.669C16.785,10.424,17,9.74,17,9c0-2.206-1.794-4-4-4S9,6.794,9,9s1.794,4,4,4
 	c0.74,0,1.424-0.215,2.019-0.567l7.669,7.669C21.634,21.458,21,23.154,21,25s0.634,3.542,1.688,4.897L10.024,42.562
